--- a/Demo/login.html
+++ b/Demo/login.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+username<input type="text" name="username"/><br/>
+password<input type="text" name="password"/><br/>
+<input type="submit" value="submit"/>
 
 
 </body>
